# image-gen

./: .gitignore  Makefile  README.md  compression.py  gemini.py  main.py  pyproject.toml
api/: database.py  main.py  models.py  schemas.py
api/routes/: generate.py  generations.py  images.py
api/services/: generation.py  storage.py
web/: components.json  package.json
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: GenerationForm.tsx  GenerationResult.tsx  HistorySidebar.tsx  ImageLightbox.tsx  ImageUploader.tsx  ParameterControls.tsx
web/src/components/ui/: dialog.tsx
web/src/store/: generation.ts
